<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OTAMS</string>

    <string name="login_title">OTAMS Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>

    <string-array name="roles_array">
        <item>Student</item>
        <item>Tutor</item>
        <item>Administrator</item>
    </string-array>

    <string name="welcome_message">Welcome! You are logged in as %1$s</string>
    <string name="btn_logout">Log Out</string>

    <string name="register_student_title">Student Registration</string>
    <string name="register_tutor_title">Tutor Registration</string>
    <string name="btn_submit">Register</string>
    <string name="btn_back">Back</string>
</resources>

