<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:text="@string/login_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/emailInput"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/passwordInput"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"/>

        <Spinner
            android:id="@+id/roleSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:entries="@array/roles_array" />


        <Button
            android:id="@+id/loginBtn"
            android:text="@string/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#4CAF50"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/registerBtn"
            android:text="@string/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#008CBA"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
</ScrollView>
